PowerShell for CaaS 

1.3 
Fixes:
- Fixes status on account operations

Changes:
- Add Speed paramenter to disk operation cmdlets to avoid wrong speedid.

New:

Datacentre:
	Get-CaasMultiGeoRegions

Account operations
	New-CaasAccount
	Get-CaasAccount
	Remove-CaasAccount
	Set-CaasAccount
	Set-CaasAccountPrimaryAdministrator


Vendor:
	New-CaasVendorCustomer
	Search-CaasVendorCustomer
	Enable-CaasVendorMultiGeoCustomer
	Suspend-CaasVendorCustomer
	Unsuspend-CaasVendorCustomer
	Cancel-CaasVendorCustomer
	Exist-CaasVendorAccount


1.2
Fixes:
All Get Cmdlet throw an error if not matching objects are found

Changes:

New-CaasConnection now supports passing -Vendor and -Region parameters for known public API Urls
Add-CaasNatRule was renamed to New-CaasNatRule to maintain cosistency with other cmdlets, an alias was added to maintain backwards compatibility
Add-CaasAclRule was renamed to New-CaasAclRule to maintain cosistency with other cmdlets, an alias was added to maintain backwards compatibility

New:

Account operations
	Reset-CaasAccountPassword

Server Operations:

	Update-CaasServerVMwareTools
	New-CaasServerCloneToCustomerImage
	Remove-CaasCustomerImage

	Network Operations:
	New-CaasServerAntiAffinityRule
	Get-CaasServerAntiAffinityRule
	Remove-CaasServerAntiAffinityRule
	Set-CaasNetwork
	New-CaasNetworkPublicIpBlock
	Get-CaasNetworkPublicIpBlock
	Set-CaasNetworkPublicIpBlock
	Remove-CaasNetworkPublicIpBlock

VIP Operations:
	New-CaasRealServer
	Get-CaasRealServer
	Set-CaasRealServer
	Remove-CaasRealServer

	New-CaasProbe
	Get-CaasProbe
	Set-CaasProbe
	Remove-CaasProbe

	New-CaasServerFarm
	Get-CaasServerFarm
	Get-CaasServerFarmDetails
	Set-CaasServerFarm
	Remove-CaasServerFarm
	Add-CaasToServerFarm
	Remove-CaasFromServerFarm

	New-CaasPersistenceProfile
	Get-CaasPersistenceProfile
	Remove-CaasPersistenceProfile

	New-CaasVip
	Get-CaasVip
	Remove-CaasVip

